Fix layout of taskbar with visible conflicts icon [notarize]

--- a/desktop/src/app/components/navbar/taskbar-conflicts.scss
+++ b/desktop/src/app/components/navbar/taskbar-conflicts.scss
@@ -1,5 +1,6 @@
 #conflicts {
   position: relative;
+  height: 0;
   margin-right: 12px;
 
   #taskbar-conflicts-container {
